# anchor-litesvm-example-project

./: Anchor.toml  README.md
programs/anchor_escrow/: Cargo.toml
programs/anchor_escrow/src/: lib.rs
programs/anchor_escrow/src/instructions/: make.rs
tests/: Cargo.toml
tests/src/: anchor_client_with_litesvm_test.rs  anchor_litesvm_test.rs  lib.rs  regular_litesvm_test.rs
