[package]
name = "tests"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[dependencies]
anchor_escrow = { version = "0.1.0", path = "../programs/anchor_escrow" }
solana-sdk = "2.2.1"
spl-token = "7.0.0"
spl-associated-token-account = "6.0.0"
borsh = "1.5.3"
sha2 = "0.10.8"
solana-program-pack = "2.0.0"
anchor-lang = "0.31.1"
solana-client = "2.2.1"

[dev-dependencies]
litesvm = "0.6.1"
litesvm-token = "0.6.1"
anchor-litesvm = "0.1.0"
anchor-client = "0.31.1"